--- a/app/src/main/res/layout/view_holder_character.xml
+++ b/app/src/main/res/layout/view_holder_character.xml
@@ -4,43 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp">
+    android:layout_margin="10dp"
+    android:background="@drawable/shape_character"
+    android:padding="10dp"
+    android:translationX="@dimen/cardview_compat_inset_shadow">
 
     <ImageView
         android:id="@+id/img_vh_character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/name_vh_character"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="145dp"
+        android:layout_height="19dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="Name"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/img_vh_character"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/img_vh_character" />
 
     <TextView
-        android:id="@+id/gender_vh_character"
+        android:id="@+id/species_vh_character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Human"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/status_vh_character"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Unknow"
+        app:layout_constraintStart_toEndOf="@+id/isAliveButton"
+        app:layout_constraintTop_toTopOf="@+id/isAliveButton" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:gravity="center"
+        android:text="-"
+        app:layout_constraintStart_toEndOf="@+id/status_vh_character"
+        app:layout_constraintTop_toTopOf="@+id/status_vh_character" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/isAliveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/name_vh_character"
+        android:clickable="false"
+        app:backgroundTint="@color/design_default_color_secondary_variant"
         app:layout_constraintStart_toStartOf="@+id/name_vh_character"
         app:layout_constraintTop_toBottomOf="@+id/name_vh_character" />
 
     <TextView
-        android:id="@+id/life_vh_character"
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Dernier lieu connu :"
+        app:layout_constraintStart_toStartOf="@+id/name_vh_character"
+        app:layout_constraintTop_toBottomOf="@+id/status_vh_character" />
+
+    <TextView
+        android:id="@+id/last_position_vh_character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/gender_vh_character"
-        app:layout_constraintStart_toStartOf="@+id/gender_vh_character"
-        app:layout_constraintTop_toBottomOf="@+id/gender_vh_character" />
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
