--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_android"
+        android:id="@+id/action_location"
         android:enabled="true"
         android:icon="@drawable/ic_terre"
         android:title="@string/bottom_navigation_menu_location" />
     <item
-        android:id="@+id/action_logo"
+        android:id="@+id/action_character"
         android:enabled="true"
         android:icon="@drawable/ic_icons8_rick_sanchez"
         android:title="@string/bottom_navigation_menu_character" />
     <item
-        android:id="@+id/action_landscape"
+        android:id="@+id/action_episode"
         android:enabled="true"
         android:icon="@drawable/ic_tv_screen"
         android:title="@string/bottom_navigation_menu_episode" />
