--- a/app/src/main/res/layout/view_holder_character.xml
+++ b/app/src/main/res/layout/view_holder_character.xml
@@ -20,8 +20,8 @@
 
     <TextView
         android:id="@+id/name_vh_character"
-        android:layout_width="145dp"
-        android:layout_height="19dp"
+        android:layout_width="147dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Name"
         android:textSize="18sp"
