--- a/app/src/main/res/layout/view_holder_character.xml
+++ b/app/src/main/res/layout/view_holder_character.xml
@@ -83,4 +83,12 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <ImageView
+        android:id="@+id/iv_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_not_favorite_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
