--- a/app/src/main/res/layout/view_holder_character.xml
+++ b/app/src/main/res/layout/view_holder_character.xml
@@ -89,6 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/name_vh_character"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_not_favorite_24" />
+        app:srcCompat="@drawable/ic_baseline_favorite_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
